优化，功能说明

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "in-player",
+  "name": "in-chimee-player",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Inthur <673641462@qq.com>",
